--- a/src/components/global/Text/styles.css
+++ b/src/components/global/Text/styles.css
@@ -2,6 +2,10 @@
   color: var(--color-primary);
   transition: 0.3s;
 }
+.text-main.faded{
+  color: #848484
+}
+
 .content1 {
   font-size: 14px;
   font-weight: 300;
