--- a/src/components/pages/Authentication/styles.css
+++ b/src/components/pages/Authentication/styles.css
@@ -138,6 +138,7 @@
   max-width: 450px;
   padding: 1rem;
   gap: 0.5rem;
+  overflow: hidden auto;
 
   background-color: rgba(255, 255, 255, 0.04);
   border: 1px solid rgba(255, 255, 255, 0.25);
